(library
 (name brr)
 (public_name brr)
 (modules
  brr brr_canvas brr_io fut jv jstr brr_webaudio brr_webcrypto
  brr_webworkers brr_webgpu brr_webmidi)
 (libraries js_of_ocaml-compiler.runtime)
 (wrapped false))

(dirs :standard console)

(subdir console
 (rule
  (target ocaml_console.js)
  (deps ocaml_console.bc.js)
  (action (copy %{deps} %{target}))))

(install
 (section
  (site (brr console)))
 (files
  console/devtools.html
  console/devtools.js
  console/highlight.pack.js
  console/manifest.json
  console/ocaml.png
  console/ocaml_console.css
  console/ocaml_console.html
  console/ocaml_console.js))
